welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:1: error: Missing closing brace `}' assumed here
def fleur(c : Color){
^FlowerCase:1: error: expected class or object definition
def fleur(c : Color){
^FlowerCase:14: error: expected class or object definition
def centre(c : Color){
^FlowerCase:20: error: expected class or object definition
def Motif(){
^FlowerCase:47: error: expected class or object definition
def growFlowers(){
^